# haskell-project-template

./: README.org  default.nix  hie.yaml  projectname.cabal  shell.nix
src/: Lib.hs
test/: TestSuite.hs
