cabal-version:          2.4
name:                   projectname
version:                0.1.0.0
author:                 Harry Askham
maintainer:             harryaskham@gmail.com

executable projectname
    main-is:            Main.hs
    other-modules:
    build-depends:      base ^>=4.14.3.0,
                        relude
    hs-source-dirs:     app
    default-language:   Haskell2010
    mixins:             base hiding (Prelude),
                        relude (Relude as Prelude),
                        relude
    default-extensions: OverloadedStrings,
                        TupleSections,
                        LambdaCase,
                        MultiWayIf,
                        ImportQualifiedPost,
                        EmptyCase,
                        FlexibleContexts,
                        FlexibleInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        NamedFieldPuns,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveGeneric,
                        DeriveLift,
                        DeriveTraversable,
                        DerivingStrategies,
                        GeneralizedNewtypeDeriving,
                        StandaloneDeriving,
                        ScopedTypeVariables,
                        ConstraintKinds,
                        RankNTypes,
                        TypeApplications,
                        ApplicativeDo,
                        DefaultSignatures,
                        PatternSynonyms,
                        ExistentialQuantification,
                        FunctionalDependencies,
                        GADTs
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-missing-export-lists
                        -Wno-missing-deriving-strategies
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-local-signatures
                        -Wno-monomorphism-restriction
